Fixed odd graph-clipping bug in link box lists
If you have a list of link boxes with graphs, like those on a set page,
clicking the "more" link for ellipsized text causes the text cell to
grow horizontally, even though the text doesn't expand into the new
horizontal space.  The graph then gets pushed to the right and clipped.
Removing 'overflow: hidden' from the graph div prevents this.

--- a/web/data/pulse.css
+++ b/web/data/pulse.css
@@ -323,10 +323,12 @@ div.mcont a:hover {
 div.graph {
   margin: 0 0 12px 0;
   padding: 0;
-  overflow: hidden;
 }
 table.graph { margin: 0 0 12px 0; }
-table.graph div.graph { margin: 0; }
+table.graph div.graph {
+  margin: 0;
+  overflow: hidden;
+}
 table.graph td { line-height: 0; }
 td.graphprev, td.graphnext { padding: 4px 0 0 0; }
 div.graphaway { position: absolute; overflow: hidden; }
